style(Toolbar dropdowns): Set fixed width for alignment, extended styles, and highlighting palette dropdowns via addition of ID prop

--- a/frontend/src/components/Toolbar/alignment-formats/AlignmentFormats.css
+++ b/frontend/src/components/Toolbar/alignment-formats/AlignmentFormats.css
@@ -1,6 +1,5 @@
 .text-alignment-container{
     position: relative;
-
 }
 
 .text-alignment-container .alignment-button{
@@ -20,4 +19,8 @@
     margin-left: auto;
     flex-shrink: 0;
     padding-right: 0.25em;
+}
+
+#alignment-dropdown{
+    width: 8em;
 }
