--- a/frontend/src/components/Toolbar/extended-styles/ExtendedStyles.css
+++ b/frontend/src/components/Toolbar/extended-styles/ExtendedStyles.css
@@ -10,3 +10,7 @@
 .extended-styles-icon svg{
     width: 22px;
 }
+
+#extended-styles-dropdown{
+    width: 11em;
+}
