--- a/frontend/src/components/Toolbar/highlighting/Highlighting.css
+++ b/frontend/src/components/Toolbar/highlighting/Highlighting.css
@@ -11,3 +11,7 @@
     height: 15px;
     border: 1px solid white;
 }
+
+#palette-dropdown{
+    width: 7em;
+}
